# Anime-Repository

./: .gitignore  LICENSE  README.md  README_CN.md  UPDATELOG.md  index.html  package-lock.json  package.json  tmdb.http  tsconfig.json  tsconfig.node.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  updater.yml
scripts/: portable.mjs  updatelog.mjs  updater.mjs
src/: App.tsx  defaultProps.tsx  i18n.tsx  index.html  layout.tsx  main.tsx  router.tsx  theme.tsx
src-tauri/: .gitignore  Cargo.toml  setting.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/controller/: mod.rs  setting.rs  subscribe_rules.rs  unrecognized_videos.rs  util.rs
src-tauri/src/data/: mod.rs  pending_videos.rs  scribe.rs  subscribe.rs  subscribe_rules.rs  unrecognized_videos.rs
src-tauri/src/handler/: mod.rs  pending_videos_list.rs  scan.rs  unrecognized_videos.rs  unrecognized_videos_list.rs  watcher.rs
src-tauri/src/http/: client.rs  mod.rs  openai.rs  tmdb.rs
src-tauri/src/model/: mod.rs  setting.rs
src-tauri/src/model/nfo/: episode.rs  mod.rs  movie.rs  public.rs  tvshow.rs
src-tauri/src/scan/: matcher.rs  mod.rs  watch.rs
src-tauri/src/service/: file_operation.rs  mod.rs  scribe.rs  subscribe.rs  unrecognized_videos.rs
src-tauri/src/service/nfo/: mod.rs  movie.rs  tvshow.rs
src-tauri/src/utils/: file.rs  matcher.rs  mod.rs  openai.rs  search.rs  tauri.rs
src/assets/styles/: global.less  global.scss
src/assets/styles/components/content/: loading.module.less  setting.module.less  setting.module.scss
src/components/: menu.tsx
src/components/content/: home.tsx  movie.tsx  setting.tsx  subscribe-rules.tsx  tv-shows.tsx  unrecognized.tsx
src/components/content/setting/: about.tsx  index.tsx  network.tsx  scraper.tsx  storage.tsx  system.tsx  ui.tsx
src/components/content/subscribe/: index.tsx  rules.tsx  undefined.tsx  unrecognized.tsx
src/components/content/subscribe-rules/: index.tsx  new.tsx
src/components/content/subscribeRules/: editRule.tsx  index.tsx
src/components/content/unrecognizedVideos/: editVideo.tsx  index.tsx  insertRule.tsx
src/components/menu/: index.tsx  sider.tsx
src/invoke/: index.tsx
src/locales/: enUS.json  en_US.json  jaJP.json  ja_JP.json  locales.tsx  zhCN.json  zh_CN.json
src/router/: index.tsx
src/store/: collapsedStore.tsx  index.tsx  settingStore.tsx  subscribeRulesStore.tsx  subscribeStore.tsx  unrecognizedStore.tsx
