[package]
name = "anime_repository"
version = "0.2.0"
description = "Developed by Chikage"
authors = ["Chikage <chikage@939.me>"]
license = "GPL-3.0"
repository = "https://github.com/Chikage0o0/Anime-Repository"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1.26.0", features = ["time", "rt", "macros"] }
actix-web = "^4.3.1"
mime_guess = "^2.0.4"
rust-embed = "^6.6.0"
env_logger = "^0.10.0"
log = "^0.4.17"
serde_json = "^1.0.93"
serde = { version = "^1.0.152", features = ["derive"] }
toml = "^0.7.2"
thiserror = "^1.0.38"
sys-locale = "^0.2.3"
reqwest = { version = "^0.11.14", features = ["socks"] }
quick-xml = { version = "0.28.0", features = ["serialize", "overlapped-lists"] }
serde_with = "^2.2.0"
chrono = "^0.4.23"
sled = "^0.34.7"
regex = "^1.7.1"
bincode = "^1.3.3"
walkdir = "^2.3.2"
config = { version = "^0.13.3", features = ["toml"] }
once_cell = "^1.17.1"
log4rs = { version = "^1.2.0", features = [
    "console_appender",
    "file_appender",
] }
window-shadows = "^0.2.1"
auto-launch = "^0.4.0"
notify-debouncer-mini = "0.2.1"
fs_extra = "1.3.0"
futures = "0.3.27"


[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
