[package]
name = "anime_repository"
version = "0.2.10"
description = "Developed by Chikage"
authors = ["Chikage <chikage@939.me>"]
license = "GPL-3.0"
repository = "https://github.com/Chikage0o0/Anime-Repository"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
log = "0.4.21"
serde_json = "1.0.116"
serde = { version = "1.0.198", features = ["derive"] }
tauri = { version = "1.6.1", features = [
    "dialog-open",
    "global-shortcut-all",
    "notification-all",
    "path-all",
    "system-tray",
    "updater",
    "window-all",
] }
toml = "0.8.12"
thiserror = "1.0.58"
sys-locale = "0.3.1"
reqwest = { version = "0.12.3", features = ["socks"] }
quick-xml = { version = "0.31.0", features = ["serialize", "overlapped-lists"] }
serde_with = "3.7.0"
chrono = "0.4.38"
sled = "0.34.7"
regex = "1.10.4"
bincode = "1.3.3"
walkdir = "2.5.0"
config = { version = "0.14.0", features = ["toml"] }
once_cell = "1.19.0"
log4rs = { version = "1.3.0", features = ["console_appender", "file_appender"] }
window-shadows = "0.2.2"
auto-launch = "0.5.0"
tokio = { version = "1.37.0", features = ["time", "rt", "macros"] }
notify-debouncer-mini = "0.4.1"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
fs_extra = "1.3.0"
pcre2 = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
